# lm-modal

./: .gitignore  Cargo.toml  TODO.md  context.md  flake.nix
modules/: home-manager.nix
src/: api.rs  app.rs  config.rs  main.rs
