[package]
name = "lm-modal"
version = "0.1.0"
edition = "2021"
description = "Wayland-native LLM overlay (like fuzzel, for AI)"
license = "MIT"
authors = ["popcat19"]

[dependencies]
egui = "0.27"
egui-winit = "0.27"
egui_glow = "0.27"  
eframe = "0.27"
glow = "0.13"
winit = "0.29"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

arboard = "3"
dirs = "5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true